Bookings and times lots design for master is updated. Next things to do: 1) Bookings would be nice to click on the individual booking and open the drawer with all information regarding it 2) Services desing 3) Dashboard real data from API 4) Earnings
